Simplify Stream API call chain